@@ -107,12 +107,6 @@ void mui_u8g2_draw_button_utf(mui_t *ui, u8g2_uint_t flags, u8g2_uint_t width, u
 void mui_u8g2_draw_button_utf_pi(mui_t *ui, u8g2_uint_t width, u8g2_uint_t padding_h, const char *text);
 
 
-/* incomplete field functions */
-
-uint8_t mui_frame_button_bold_select_u8g2(mui_t *ui, uint8_t msg);
-uint8_t mui_frame_button_invers_select_u8g2(mui_t *ui, uint8_t msg);
-uint8_t mui_half_width_frame_button_invers_select_u8g2(mui_t *ui, uint8_t msg);
-uint8_t mui_line_button_invers_select_u8g2(mui_t *ui, uint8_t msg);
 
 /* ready to use field functions */
 
@@ -125,10 +119,13 @@ uint8_t mui_u8g2_btn_goto_w1_fi(mui_t *ui, uint8_t msg);
 
 uint8_t mui_u8g2_btn_exit_wm_fi(mui_t *ui, uint8_t msg);
 
+uint8_t mui_u8g2_u8_chkbox_wm_pi(mui_t *ui, uint8_t msg);       /* MUIF_VARIABLE, MUI_XY */
+uint8_t mui_u8g2_u8_radio_wm_pi(mui_t *ui, uint8_t msg);        /* MUIF_VARIABLE,MUI_XYAT */
 
 
-uint8_t mui_u8g2_u8_opt_line_wa_mse_pi(mui_t *ui, uint8_t msg);
-uint8_t mui_u8g2_u8_opt_line_wa_mud_pi(mui_t *ui, uint8_t msg);
+
+uint8_t mui_u8g2_u8_opt_line_wa_mse_pi(mui_t *ui, uint8_t msg); /* MUIF_VARIABLE,MUI_XYAT */
+uint8_t mui_u8g2_u8_opt_line_wa_mud_pi(mui_t *ui, uint8_t msg); /* MUIF_VARIABLE,MUI_XYAT */
 
 uint8_t mui_u8g2_u8_opt_parent_wm_mse_pi(mui_t *ui, uint8_t msg);
 uint8_t mui_u8g2_u8_opt_radio_child_wm_mse_pi(mui_t *ui, uint8_t msg);
@@ -138,8 +135,6 @@ uint8_t mui_u8g2_u8_opt_child_wm_mse_pi(mui_t *ui, uint8_t msg); /* like mui_u8g
 uint8_t mui_u8g2_goto_parent(mui_t *ui, uint8_t msg);                        /* MUIF_RO */
 uint8_t mui_u8g2_goto_child_w1_mse_pi(mui_t *ui, uint8_t msg);          /* MUIF_BUTTON, MUI_XYA */
 
-uint8_t mui_u8g2_u8_chkbox_wm_pi(mui_t *ui, uint8_t msg);
-uint8_t mui_u8g2_u8_radio_wm_pi(mui_t *ui, uint8_t msg);
 
 
 uint8_t mui_u8g2_u8_char_wm_mud_pi(mui_t *ui, uint8_t msg);
