@@ -490,9 +490,9 @@ uint8_t *u8g2_m_8_16_f(uint8_t *page_cnt);
 uint8_t *u8g2_m_12_12_1(uint8_t *page_cnt);
 uint8_t *u8g2_m_12_12_2(uint8_t *page_cnt);
 uint8_t *u8g2_m_12_12_f(uint8_t *page_cnt);
-uint8_t *u8g2_m_16_10_1(uint8_t *page_cnt);
-uint8_t *u8g2_m_16_10_2(uint8_t *page_cnt);
-uint8_t *u8g2_m_16_10_f(uint8_t *page_cnt);
+uint8_t *u8g2_m_10_16_1(uint8_t *page_cnt);
+uint8_t *u8g2_m_10_16_2(uint8_t *page_cnt);
+uint8_t *u8g2_m_10_16_f(uint8_t *page_cnt);
 uint8_t *u8g2_m_16_16_1(uint8_t *page_cnt);
 uint8_t *u8g2_m_16_16_2(uint8_t *page_cnt);
 uint8_t *u8g2_m_16_16_f(uint8_t *page_cnt);
